--- a/src/components/css/Task.css
+++ b/src/components/css/Task.css
@@ -1,6 +1,7 @@
 .task {
   border-radius: 0.5em;
   margin-bottom: 0.5em;
+  min-width: min-content;
 }
 
 .task-inner {
